--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "http-proxy-middleware": "^2.0.6",
     "nanoid": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -37,6 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy":"http://localhost:5000"
+  }
 }
