--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.8.2",
     "axios": "^1.2.2",
     "http-proxy-middleware": "^2.0.6",
     "nanoid": "^4.0.0",
