--- a/package.json
+++ b/package.json
@@ -8,21 +8,23 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.8.2",
     "axios": "^1.2.2",
+    "babel-plugin-import": "^1.13.6",
+    "customize-cra": "^1.0.0",
     "http-proxy-middleware": "^2.0.6",
     "nanoid": "^4.0.0",
     "prop-types": "^15.8.1",
     "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test"
   },
   "eslintConfig": {
     "extends": [
