--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "babel-plugin-import": "^1.13.6",
     "customize-cra": "^1.0.0",
     "http-proxy-middleware": "^2.0.6",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "nanoid": "^4.0.0",
     "prop-types": "^15.8.1",
     "pubsub-js": "^1.9.4",
